new design almost complete

--- a/about.html
+++ b/about.html
@@ -1,12 +1,7 @@
 ---
-layout: general
-highlight_section: tech
+layout: section
 title: About Fedora Developer Portal
 description: What is Fedora Developer Portal and how to contribute.
-layout: general
-section: about
-attribution: Abstract Technology architecture parabolic Windows by Wonderlane on Flickr, CC-BY-2.0
-photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
 ---
 <div class="row">
   <div class="col-sm-12">
