--- a/deployment.html
+++ b/deployment.html
@@ -1,9 +1,8 @@
 ---
-layout: general
+layout: section
 highlight_section: deployment
 title: Deploy and distribute
 description: Package as an RPM. Distribute with Copr. Deploy to OpenShift.
-layout: general
 section: deploy
 category-name: deploy
 attribution: Minotaur Rocket Launch at NASA Wallops by NASA Goddard Space Flight Center on Flickr, CC-BY-2.0
