--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 ---
-layout: front
+layout: homepage
 highlight_section: home
 ---
 
-<div class="row text-center">
-<div class="row text-center" id="front-nav">
+<div class="row" id="front-nav">
   <div class="col-sm-3">
-	<a href="/start.html"><img src="/static/img/nav-start.png"></a>
-    <h3><a href="/start.html">Start a project</a></h3>
-    <p>How to do web, mobile, Arduino, and RaspberryPi development on Fedora.</p>
+    <a class="panel-link" href="/start.html">
+      <div class="panel panel-default">
+      	<img src="/static/img/nav-start.png">
+        <h3>Start a project</h3>
+        <p>How to do web, mobile, Arduino, and RaspberryPi development on Fedora.</p>
+      </div>
+    </a>
   </div>
   <div class="col-sm-3">
-	<a href="/tools.html"><img src="/static/img/nav-tools.png"></a>
-    <h3><a href="/tools.html">Get tools</a></h3>
-    <p>Prepare your environment with DevAssistant. Collaborate with Docker and Vagrant. Handle and debug crashes with ABRT.</p>
+    <a class="panel-link" href="/tools.html">
+      <div class="panel panel-default">
+      	<img src="/static/img/nav-tools.png">
+        <h3>Get tools</h3>
+        <p>Prepare your environment with DevAssistant and run it with Docker and Vagrant.</p>
+      </div>
+    </a>
   </div>
   <div class="col-sm-3">
-	<a href="/tech.html"><img src="/static/img/nav-tech.png"></a>
-    <h3><a href="/tech.html">Languages & databases</a></h3>
-    <p>Languages and their modules available in Fedora. Installing databases and their configuration.</p>
+    <a class="panel-link" href="/tech.html">
+      <div class="panel panel-default">
+      	<img src="/static/img/nav-tech.png">
+        <h3>Languages & databases</h3>
+        <p>Languages and their modules available in Fedora. Installing databases and their configuration.</p>
+      </div>
+    </a>
   </div>
   <div class="col-sm-3">
-	<a href="/deployment.html"><img src="/static/img/nav-deploy.png"></a>
-    <h3><a href="/deployment.html">Deploy and distribute</a></h3>
-    <p>Package as an RPM. Distribute with Copr. Deploy to OpenShift.</p>
+    <a class="panel-link" href="/deployment.html">
+      <div class="panel panel-default">
+      	<img src="/static/img/nav-deploy.png">
+        <h3>Deploy and distribute</h3>
+        <p>Package as an RPM. Distribute with Copr. Deploy to OpenShift.</p>
+      </div>
+    </a>
   </div>
-</div>
-
-
 </div>
