--- a/start.html
+++ b/start.html
@@ -1,9 +1,8 @@
 ---
-layout: general
+layout: section
 highlight_section: start
 title: Start a project
 description: How to do web, mobile, Arduino, and RaspberryPi development on Fedora.
-layout: general
 section: start
 category-name: start
 attribution: Tools of the Trade by Cat Burston on Flickr, CC-BY-2.0
