--- a/tools.html
+++ b/tools.html
@@ -1,9 +1,8 @@
 ---
-layout: general
+layout: section
 highlight_section: tools
 title: Get tools
 description: Prepare your environment with DevAssistant. Collaborate with Docker, Vagrant and Virt-builder. Handle and debug crashes with ABRT.
-layout: general
 category-name: tools
 ---
 <div class="row">
