--- a/tech.html
+++ b/tech.html
@@ -1,20 +1,18 @@
 ---
-layout: general
+layout: section
 highlight_section: tech
 title: Languages &amp; databases
 description: Languages and their modules available in Fedora. Installing databases and their configuration.
-layout: general
 section: tech
 category-name: tech
 attribution: Abstract Technology architecture parabolic Windows by Wonderlane on Flickr, CC-BY-2.0
 photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
 ---
+
 <div class="row">
   <div class="col-sm-12">
     <h2> Languages </h2>
   </div>
-</div>
-<div class="row">
   {% for p in site.pages %}
   {% if p.section == "tech-languages" %}
   <div class="col-sm-6">
@@ -37,10 +35,11 @@ photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
   {% endif %}
   {% endfor %}
 </div>
-<div class="col-sm-12">
-    <h2> Databases </h2>
-</div>
+
 <div class="row">
+  <div class="col-sm-12">
+      <h2> Databases </h2>
+  </div>
   {% for p in site.pages %}
   {% if p.section == "tech-database" %}
   <div class="col-sm-6">
