--- a/tech.html
+++ b/tech.html
@@ -5,8 +5,8 @@ title: Languages &amp; databases
 description: Languages and their modules available in Fedora. Installing databases and their configuration.
 section: tech
 category-name: tech
-attribution: Abstract Technology architecture parabolic Windows by Wonderlane on Flickr, CC-BY-2.0
-photo-link: https://www.flickr.com/photos/wonderlane/2315590279/
+attribution: Silk Reeling Machine at Tomioka Silk Mill by aotaro on Flickr, CC-BY-2.0
+photo-link: https://www.flickr.com/photos/aotaro/20952868875/
 ---
 
 <div class="row">
