help us tag and banner

--- a/deployment.html
+++ b/deployment.html
@@ -11,23 +11,7 @@ photo-link: https://www.flickr.com/photos/gsfc/5890869490/
 <div class="row">
   {% for p in site.pages %}
   {% if p.section == "deployment" %}
-  <div class="col-sm-6">
-    <a class="panel-link" href="{{ p.url }}">
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <div class="media">
-            <div class="media-left">
-              <img style="width:100px" src="{{ p.page | page_logo }}">
-            </div>
-            <div class="media-body">
-              <h3>{{ p.title }}</h3>
-              <p>{{p.description}}</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
+    {% include content-link-panel.html %}
   {% endif %}
   {% endfor %}
 </div>
