--- a/search.html
+++ b/search.html
@@ -16,19 +16,7 @@ description: Search Fedora Developer Portal
 
 <div class="panel panel-default">
   <section id="search-results">
-    <div class="entries" style="font-size: 15px; display: block; position: static; padding: 0; margin: 0; border: 0; width: 100%;">
+    <div class="entries">
     </div>
   </section>
 </div>
-
-{% raw %}
-<script id="search-results-template" type="text/mustache">
-  {{#entries}}
-    <article style="padding: 0; margin: 0;">
-      <h3>
-        <a href="{{url}}">{{title}}</a>
-      </h3>
-    </article>
-  {{/entries}}
-</script>
-{% endraw %}
